--- a/style.css
+++ b/style.css
@@ -1,11 +1,68 @@
 .wrapper {
-    width: 500px;
+    width: 600px;
     margin: 0 auto;
 }
 
 .slider{
-    width: 300px;
-    height: 200px;
-    background-color: rgba(9, 241, 230, 0.993);
+    margin-top: 70px;
+    width: 500px;
+    height: 450px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+}
+
+
+
+.mem {
+    width: 50vw;
+    /* opacity: 0; */
+}
+
+input:nth-of-type(1):checked  ~ .photo_place .mem:nth-of-type(1){
+    opacity: 1;
+}
+
+@media screen and (max-width: 768px) { 
+    .mem {
+        width: 80vw;
+    }
+}
+
+
+.not_showing {
+    display: none;
+}
+
+.controller {
+    display: flex;
+    width: 250px;
+    justify-content: space-around;
+    column-gap: 15px;/* 
+    margin: 0 auto; */
+}
+
+input[type=radio] {
+	display: none;
+}
+
+ label {
+    border: 3px solid rgb(51, 255, 0);
+    border-radius: 50px;
+    width: 45px;
+    height: 15px;
+    content: " ";
+    padding: 0 25px;
+}
+
+
+label:hover {
+    border-color: rgb(52, 243, 138);
+    cursor: pointer;
+}
+
+ input:checked + label {
+	background-color: rgb(51, 255, 0)
 }
